modified:   src/content/posts/108764506.mdx 	new file:   src/content/posts/73383148.mdx

--- a/src/content/posts/108764506.mdx
+++ b/src/content/posts/108764506.mdx
@@ -27,5 +27,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_1_MAXIMUS.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_3_CAMPFIRE.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
 </div>
