modified:   package.json 	deleted:    src/components/ArtistCard.astro

--- a/src/content/posts/105808376.mdx
+++ b/src/content/posts/105808376.mdx
@@ -11,7 +11,7 @@ attachments: 2
 登场角色：Maximus (Macro Sergal 的 OC)
 已获授权使用
 
-import DownloadButton from '../../components/DownloadButton.astro';
+import DownloadButton from '../../components/common/DownloadButton.astro';
 
 <div class="grid grid-cols-3 gap-4 max-w-xl mx-auto p-10">
         <a data-fancybox="gallery" href="https://res.cloudinary.com/dkhp3hucr/image/upload/v1745137990/kemono/Takahirosi/105808376/uc2cwnr7nnylldlmtlxr.avif">
@@ -23,5 +23,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_1_MAXIMUS.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_1_MAXIMUS.7z" buttonText="Download Now" label="下载作品集" />
 </div>
