--- a/src/content/posts/123831560.mdx
+++ b/src/content/posts/123831560.mdx
@@ -12,7 +12,7 @@ attachments: 2
 登场角色：LeonBeenic
 /已获授权使用
 
-import DownloadButton from '../../components/DownloadButton.astro';
+import DownloadButton from '../../components/common/DownloadButton.astro';
 
 <div class="grid grid-cols-3 gap-4 max-w-xl mx-auto p-10">
         <a data-fancybox="gallery" href="https://res.cloudinary.com/dkhp3hucr/image/upload/v1745134864/kemono/Takahirosi/123831560/krexdqd1ckncb2iykkro.avif">
@@ -24,5 +24,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_1_BEENIC.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_1_BEENIC.7z" buttonText="Download Now" label="下载作品集" />
 </div>
