--- a/src/content/posts/78019698.mdx
+++ b/src/content/posts/78019698.mdx
@@ -20,5 +20,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_4_DEMON2.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_4_DEMON2.7z" buttonText="Download Now" label="下载作品集" />
 </div>
