--- a/src/content/artists/21CenturyRaccoon.mdx
+++ b/src/content/artists/21CenturyRaccoon.mdx
@@ -1,9 +1,8 @@
 ---
-name: "Takahirosi"
+name: "21CenturyRaccoon"
 avatar: "https://ik.imagekit.io/dgfwhfvkn/kemono/Takahirosi/O3vLHh4WFWDt6BCF3cJAv52bIAIJIDnpfhettmxED7YPCLaRt6MT3aWref2XAftN_eqORMo5lb.avif?updatedAt=173764584826"
 cover: "https://ik.imagekit.io/dgfwhfvkn/kemono/Takahirosi/banner_patreon_Dp1Zsdf5j.avif?updatedAt=1737645848688"
 service: "Patreon"
+serviceUrl: "https://www.patreon.com/21CenturyRaccoon"
+bio: "Creating NSFW-FURRY, KEMO, DIGITAL PAINTINGS"
 ---
-
-# About Artist One
-大家好，我是 Takahirosi，欢迎来到我的 Patreon！^^我主要绘制 Bara/Furry 题材的艺术作品。
