--- a/src/content/posts/106549627.mdx
+++ b/src/content/posts/106549627.mdx
@@ -8,7 +8,8 @@ tags: ["furry", "latex", "previews"]
 attachments: 2
 ---
 
-import DownloadButton from '../../components/DownloadButton.astro';
+import DownloadButton from '../../components/common/DownloadButton.astro';
+
 
 <div class="grid grid-cols-3 gap-4 max-w-xl mx-auto p-10">
         <a data-fancybox="gallery" href="https://res.cloudinary.com/dkhp3hucr/image/upload/v1745135861/kemono/Takahirosi/106549627/xbopqfe9jooddtlrhqkc.avif">
@@ -20,5 +21,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_3_DIEGO.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_3_DIEGO.7z" buttonText="Download Now" label="下载作品集" />
 </div>
