--- a/src/content/posts/121841852.mdx
+++ b/src/content/posts/121841852.mdx
@@ -10,7 +10,7 @@ attachments: 2
 
 登场角色：莫诺马萨 / 多罗瓦因 出自：《Live a Hero》
 
-import DownloadButton from '../../components/DownloadButton.astro';
+import DownloadButton from '../../components/common/DownloadButton.astro';
 
 <div class="grid grid-cols-3 gap-4 max-w-xl mx-auto p-10">
         <a data-fancybox="gallery" href="https://res.cloudinary.com/dkhp3hucr/image/upload/v1745130854/kemono/Takahirosi/121841852/dtreiygn9ju8hwdzlmgp.avif">
@@ -22,5 +22,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_1_MONOMASA.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_1_MONOMASA.7z" buttonText="Download Now" label="下载作品集" />
 </div>
