--- a/src/content/posts/73698046.mdx
+++ b/src/content/posts/73698046.mdx
@@ -11,7 +11,7 @@ attachments: 2
 / 第三轮投票优胜者
 Billford x Volund
 
-import DownloadButton from '../../components/DownloadButton.astro';
+import DownloadButton from '../../components/common/DownloadButton.astro';
 
 <div class="grid grid-cols-3 gap-4 max-w-xl mx-auto p-10">
         <a data-fancybox="gallery" href="https://res.cloudinary.com/dkhp3hucr/image/upload/v1745135266/kemono/Takahirosi/73698046/rjosfjs1mefizetfwmaz.avif">
@@ -23,5 +23,5 @@ import DownloadButton from '../../components/DownloadButton.astro';
       </div>
 
 <div class="mt-4">
-  <DownloadButton downloadLink="https://pan.dragonjay.top/139/_3_BILLFORD.7z" buttonText="Download Now" ariaLabel="Navigate to download page for this content" size="medium" />
+  <DownloadButton url="https://pan.dragonjay.top/139/_3_BILLFORD.7z" buttonText="Download Now" label="下载作品集" />
 </div>
